Fix alignment

--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,8 @@ body {
     align-items: center;
     -webkit-justify-content: center;
     justify-content: center;
+    padding: 0 2em;
+    text-align: center;
 }
 
 .container.first {
